# alma-webapp

./: .env.example  .gitignore  .prettierignore  AGENTS.md  LICENSE-MIT  Makefile  README.md  SECURITY.md  docker-compose.yml  justfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.mts
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_leads_table.py
backend/app/: __init__.py  db.py  main.py  models.py  schemas.py  seed.py
backend/app/api/: auth.py  deps.py  health.py  leads.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/services/: __init__.py  email.py  leads.py  storage.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_email.py  test_fuzz.py  test_health.py  test_leads.py  test_middleware.py  test_security.py  test_storage.py
docs/: AGENT_USAGE.md  DESIGN.md
e2e/: smoke.spec.ts
frontend/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.mts  vitest.setup.ts
frontend/e2e/: lead-flow.spec.ts  smoke.spec.ts
frontend/src/: proxy.ts
frontend/src/app/: error.tsx  global-error.tsx  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/admin/leads/: loading.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: lead-form.test.tsx  lead-form.tsx  login-form.test.tsx  login-form.tsx  logout-button.test.tsx  logout-button.tsx  mark-reached-out-button.test.tsx  mark-reached-out-button.tsx
frontend/src/components/ui/: alert.tsx
frontend/src/lib/: api.fuzz.test.ts  api.test.ts  api.ts  format.fuzz.test.ts  format.test.ts  format.ts  utils.test.ts
src/: global.d.ts  proxy.ts
src/app/: globals.css
src/app/[locale]/: layout.tsx  page.tsx
src/components/: locale-switcher.tsx
src/i18n/: navigation.ts  request.ts  routing.ts
src/i18n/messages/: en-US.json  es-ES.json
