[project]
name = "alma-backend"
version = "0.1.0"
description = "FastAPI backend for the Alma lead-management app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.50.2",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.4.0",
    "pydantic[email]>=2.13.4",
    "python-multipart>=0.0.9",
    "pyjwt>=2.9.0",
    "resend>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "pyright>=1.1.411",
    "hypothesis>=6.100",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

# Tests use loosely-typed helpers (FastAPI TestClient / httpx), so relax the
# "unknown type" reports there while keeping app/ strict.
[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = ["."]
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingParameterType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
    # Upstream: FastAPI's TestClient still imports httpx via starlette.testclient.
    "ignore:Using .httpx. with .starlette.testclient. is deprecated",
]
